--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.2",
+    "@react-native-community/datetimepicker": "^7.4.1",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-calendars": "^1.1300.0",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-maps": "^1.7.1",
     "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "^3.4.2",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
